--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,9 @@
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "unfetch": "^4.1.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
