--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "node": "8"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
     "request": "^2.88.0",
