--- a/functions/package.json
+++ b/functions/package.json
@@ -13,9 +13,11 @@
     "node": "8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0",
+    "isomorphic-unfetch": "^3.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "unfetch": "^4.1.0",
